--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,172 @@
-.App {
-  text-align: center;
+#map {
+  height: 100vh;
+  width: 80%;
+  float: right;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+#map-full {
+  height: 100vh;
+  width: 100%;
+  float: right;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  background: #2d343f;
+  color: #2d343f;
+}
+button {
+  float: left;
+  margin-left: 8px;
+  display: inline-block;
+  font-size: 26px;
+  border: none;
   color: white;
+  background: #2d343f;
+
 }
 
-.App-link {
-  color: #61dafb;
+button:hover, button:focus {
+  color: #f9d764;
+  cursor: pointer;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+p {
+  line-height: 0em;
+}
+
+.hidden {
+  position:absolute;
+  left:-10000px;
+  top:auto;
+  width:1px;
+  height:1px;
+  overflow:hidden;
+}
+
+.header {
+  text-align: center;
+  color: white;
+  height: 50px;
+}
+.side-bar {
+  position: absolute;
+  width: 20%;
+  background: #3f4754;
+  height: 60vh;
+  overflow-y: scroll
+}
+
+.hidden {
+  display: none;
+}
+
+.venues-list {
+  padding: 0px 5px;
+  text-align: left;
+  font-size: 17px;
+  list-style-type: none;
+  line-height: 1.5;
+  color: white;
+
+
+}
+
+.venues-list li:hover {
+  color: red;
+  cursor: pointer;
+  border-style: outset;
+}
+
+.filter-bar {
+  padding: 5px;
+}
+
+.filter-bar input {
+  width: 95%;
+  font-size: 14px;
+}
+
+.filter-input {
+  display: inline-block;
+  margin-left: 2px;
+  width: 90%;
+}
+
+
+/* RESPONSIVE */
+
+@media screen and (max-width: 750px) {
+  .side-bar {
+    width: 100%;
+    top: 60%;
+    column-count: 3;
   }
-  to {
-    transform: rotate(360deg);
+
+  #map {
+    height: 50vh;
+    width: 100%;
+  }
+
+  #map-full {
+    height: 100vh;
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .side-bar {
+    width: 100%;
+    top: 60%;
+    column-count: 2;
+  }
+
+  #map {
+    height: 50vh;
+    width: 100%;
+  }
+
+  #map-full {
+    height: 100vh;
+    width: 100%;
+  }
+
+  h1 {
+    font-size: 1.5em;
+  }
+
+  p {
+    font-size: 0.9em;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .side-bar {
+    width: 100%;
+    top: 60%;
+    column-count: 1;
+  }
+
+  #map {
+    height: 50vh;
+    width: 100%;
+  }
+
+  #map-full {
+    height: 100vh;
+    width: 100%;
+  }
+
+  h1 {
+    font-size: 1em;
+  }
+
+  p {
+    font-size: 0.8em;
   }
 }
